@@ -1,21 +1,21 @@
 package com.example.workerManagers.domain.aimatching.service;
 
 import com.example.workerManagers.domain.aimatching.dto.AIMatchingRequestDto;
+import com.example.workerManagers.domain.aimatching.dto.AIMatchingResponseDto;
 import com.example.workerManagers.domain.aimatching.dto.JobPostMatchingDto;
 import com.example.workerManagers.domain.jobpost.entity.JobPost;
 import com.example.workerManagers.domain.jobpost.repository.JobPostRepository;
+import com.example.workerManagers.domain.resume.entity.Resume;
+import com.example.workerManagers.domain.resume.repository.ResumeRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
-import lombok.Getter;
-import lombok.Setter;
-import lombok.NoArgsConstructor;
-import lombok.AllArgsConstructor;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.JsonNode;
+import reactor.core.publisher.Mono;
 
 import java.util.Collections;
 import java.util.List;
@@ -27,18 +27,18 @@ import java.util.stream.Collectors;
 public class AIMatchingServiceImpl implements AIMatchingService {
 
     private final JobPostRepository jobPostRepository;
+    private final ResumeRepository resumeRepository;
     private final WebClient webClient;
-
-    @Value("${fastapi.url:https://port-0-workermanagers-ai-m9i2iiuc1e546d59.sel4.cloudtype.app}")
-    private String fastApiUrl;
 
     @Override
     public List<JobPostMatchingDto> getMatchingScoresForAllJobPosts(String resumeText) {
         List<JobPost> jobPosts = jobPostRepository.findAll();
         return jobPosts.stream()
                 .map(jobPost -> {
-                    AIMatchingRequestDto requestDto = convertJobPostToFastApiRequest(jobPost, resumeText);
-                    Double matchingScore = getMatchingScore(requestDto);
+                    Double matchingScore = getMatchingScore(
+                        createJobPostText(jobPost),
+                        resumeText
+                    );
                     return JobPostMatchingDto.builder()
                             .jobPostId(jobPost.getJobPostId())
                             .companyName(jobPost.getCompany().getCompanyName())
@@ -51,41 +51,35 @@ public class AIMatchingServiceImpl implements AIMatchingService {
                 .collect(Collectors.toList());
     }
 
-    @Getter
-    @Setter
-    @NoArgsConstructor
-    @AllArgsConstructor
-    private static class MatchingScoreResponse {
-        private Double score;
-        private String message;
-    }
+    @Override
+    public List<AIMatchingResponseDto> getMatchingScores(AIMatchingRequestDto requestDto) {
+        // 이력서 조회
+        Resume resume = resumeRepository.findById(requestDto.getResumeId())
+                .orElseThrow(() -> new IllegalArgumentException("Resume not found"));
 
-    private Double getMatchingScore(AIMatchingRequestDto requestDto) {
-        return webClient.post()
-                .uri(fastApiUrl + "/compare")
-                .contentType(MediaType.APPLICATION_JSON)
-                .bodyValue(requestDto)
-                .retrieve()
-                .bodyToMono(String.class)
-                .map(response -> {
-                    try {
-                        ObjectMapper mapper = new ObjectMapper();
-                        JsonNode root = mapper.readTree(response);
-                        if (root.isArray() && root.size() > 0) {
-                            String similarity = root.get(0).get("similarity").asText();
-                            // "76.62점"에서 숫자만 추출
-                            return Double.parseDouble(similarity.replaceAll("[^0-9.]", ""));
-                        }
-                        throw new RuntimeException("Invalid response format");
-                    } catch (Exception e) {
-                        throw new RuntimeException("Failed to parse FastAPI response", e);
-                    }
+        // 모든 채용 공고 조회
+        List<JobPost> jobPosts = jobPostRepository.findAll();
+
+        return jobPosts.stream()
+                .map(jobPost -> {
+                    Double matchingScore = getMatchingScore(
+                        createJobPostText(jobPost),
+                        resume.getResumeText()
+                    );
+                    
+                    return AIMatchingResponseDto.builder()
+                            .jobPostId(jobPost.getJobPostId())
+                            .companyName(jobPost.getCompany().getCompanyName())
+                            .jobName(jobPost.getJobCode().getJobName())
+                            .matchingScore(matchingScore)
+                            .build();
                 })
-                .block();
+                .sorted((a, b) -> Double.compare(b.getMatchingScore(), a.getMatchingScore()))
+                .collect(Collectors.toList());
     }
 
-    private AIMatchingRequestDto convertJobPostToFastApiRequest(JobPost jobPost, String resumeText) {
-        String jobPostDescription = String.format(
+    private String createJobPostText(JobPost jobPost) {
+        return String.format(
             "[%s - %s]\n\n%s\n\n[주요 업무]\n%s\n\n[자격 요건]\n%s\n\n[우대 사항]\n%s\n\n[인재상]\n%s\n\n[근무 기간]\n%s\n\n[근무 지역]\n%s\n\n[마감일]\n%s",
             jobPost.getCompany().getCompanyName(),
             jobPost.getJobCode().getJobName(),
@@ -98,15 +92,48 @@ public class AIMatchingServiceImpl implements AIMatchingService {
             jobPost.getJobRegion(),
             jobPost.getDeadline().toString()
         );
+    }
 
-        AIMatchingRequestDto.JobPostData jobPostData = new AIMatchingRequestDto.JobPostData();
-        jobPostData.setJobPost_id(jobPost.getJobPostId());
-        jobPostData.setJobPost_description(jobPostDescription);
+    private Double getMatchingScore(String jobPostText, String resumeText) {
+        return webClient.post()
+                .uri("/compare")
+                .contentType(MediaType.APPLICATION_JSON)
+                .bodyValue(createFastApiRequest(jobPostText, resumeText))
+                .retrieve()
+                .onStatus(status -> status.is4xxClientError() || status.is5xxServerError(), response -> {
+                    return response.bodyToMono(String.class)
+                            .flatMap(errorBody -> Mono.error(new RuntimeException(
+                                    "FastAPI 서버 에러: " + errorBody)));
+                })
+                .bodyToMono(String.class)
+                .map(response -> {
+                    try {
+                        ObjectMapper mapper = new ObjectMapper();
+                        JsonNode root = mapper.readTree(response);
+                        if (root.isArray() && root.size() > 0) {
+                            JsonNode firstItem = root.get(0);
+                            if (firstItem.has("similarity")) {
+                                String similarityStr = firstItem.get("similarity").asText();
+                                return Double.parseDouble(similarityStr.replace("점", ""));
+                            }
+                        }
+                        throw new RuntimeException("Invalid response format: " + response);
+                    } catch (Exception e) {
+                        throw new RuntimeException("Failed to parse FastAPI response: " + e.getMessage());
+                    }
+                })
+                .block();
+    }
 
-        AIMatchingRequestDto requestDto = new AIMatchingRequestDto();
-        requestDto.setInput_text(resumeText);
-        requestDto.setDataset(Collections.singletonList(jobPostData));
-
-        return requestDto;
+    private Object createFastApiRequest(String jobPostText, String resumeText) {
+        return new Object() {
+            public final String input_text = jobPostText;
+            public final List<Object> dataset = List.of(
+                new Object() {
+                    public final Long resume_id = 1L; // 임시 ID
+                    public final String resume_description = resumeText;
+                }
+            );
+        };
     }
 } 
